# airflow

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  Znotes.txt  docker-compose.yaml  notebook.ipynb  notes.txt  pyproject.toml
airflow/: airflow.cfg
airflow/dags/: dag_teste.py
dags/: dag_teste.py
database/: database.db  database.sql  ddl.sql
docker/Dockerfiles/: Dockerfile.airflow
migration/: airflow.cfg  airflow.db  simple_auth_manager_passwords.json.generated
migration/dags/: dag_teste_2.py  dbclean_dev.py
migrations/: airflow.cfg  airflow.db  airflow.db-shm  airflow.db-wal
