[project]
name = "airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.1.7",
    "apache-airflow-providers-mysql>=6.4.3",
    "apache-airflow-providers-postgres>=6.5.4",
    "apache-airflow-providers-sqlite>=4.2.1",
    "ipykernel==7.2.0",
    "pandas==2.3.3",
    "psycopg2-binary==2.9.11",
    "pymysql==1.1.2",
    "sqlalchemy==2.0.46",
    "uv>=0.10.4",
]
